# payment-webhook

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy_main.yml
infra/: cloudbuild.yaml
infra/app_engine/: dev.yaml  main.yaml
payment_webhook/: containers_config.py  main.py
payment_webhook/adapters/: __factory__.py
payment_webhook/adapters/controllers/: __binding__.py  __dependencies__.py  __init__.py  dtos.py  interfaces.py  pix_webhook_controller.py  pix_websocket_controller.py
payment_webhook/adapters/interface_adapters/: __init__.py  account_adapter.py  client_connection_queue_adapter.py  event_publisher_adapter.py  example.py  exceptions.py  notification_adapter.py
payment_webhook/business/: __factory__.py  interfaces.py  ports.py  services.py
payment_webhook/business/use_case/: __init__.py  cancel_payment_receipt_check_use_case.py  check_payment_of_client_in_the_queue_use_case.py  example_use_case.py  exceptions.py  interfaces.py  payment_received_use_case.py  save_client_in_waiting_queue_use_case.py
payment_webhook/frameworks/: __factory__.py
payment_webhook/frameworks/example/: __init__.py  manager.py
payment_webhook/frameworks/firebase/: __init__.py  manager.py
payment_webhook/frameworks/mongodb/: __init__.py  manager.py
payment_webhook/frameworks/pubsub/: __init__.py  manager.py
payment_webhook/frameworks/redis/: __init__.py  (+1 more)
payment_webhook/models/: __init__.py  user_model.py
payment_webhook/tools/: date.py  json_codec.py
payment_webhook/types/: object_id.py
(+7 files in other folders)
