[tool.poetry]
name = "payment-webhook"
version = "0.1.0"
description = ""
authors = ["MrAbade <vini.abade@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
firebase-admin = "^6.5.0"
motor = "^3.4.0"
environs = "^11.0.0"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
google-cloud-pubsub = "^2.21.1"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-copyright = "^0.2.4"
pylint = "^3.1.0"
wily = "^1.25.0"
ipython = "^8.23.0"

[tool.isort]
profile = "black"
line_length = "120"
known_first_party = ["commitizen", "tests"]

[tool.black]
line-length = 120

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint]
init-hook = "import sys; sys.path.append('./payment_webhook'), sys.path.append('./tests')"
fail-under = "10"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = [
    "C0103",
    "C0114",
    "C0116",
    "C0301",
    "C0321",
    "C0115",
    "R0903",
    "W0236",
    "W1203",
    "E0611",
    "R0913",
]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
